--- a/dropshark.services.yml
+++ b/dropshark.services.yml
@@ -1,9 +1,13 @@
 services:
   dropshark.fingerprint:
     class: Drupal\dropshark\Fingerprint\FingerprintDefault
+    arguments: ['@config.factory', '@kernel']
   dropshark.queue:
     class: Drupal\dropshark\Queue\DbQueue
-    arguments: ['@http_client']
+    arguments: ['@dropshark.request']
+  dropshark.request:
+    class: Drupal\dropshark\Request\DropSharkRequest
+    arguments: ['@config.factory', '@http_client']
   plugin.manager.dropshark_collector:
     class: Drupal\dropshark\Collector\CollectorManager
     parent: default_plugin_manager
