--- a/config/install/dropshark.settings.yml
+++ b/config/install/dropshark.settings.yml
@@ -1,8 +1,7 @@
-dropshark.settings:
-  site_id: NULL
-  site_token: NULL
-  host: 'https://data.dropshark.io'
-  cron: true
-  queue:
-    - lock_max: 300
-    - max_process: 100
+site_id: NULL
+site_token: NULL
+host: 'https://data.dropshark.io'
+cron: true
+queue:
+  lock_max: 300
+  max_process: 100
