added `dropshark.linfo_factory` service definition

--- a/dropshark.services.yml
+++ b/dropshark.services.yml
@@ -2,6 +2,9 @@ services:
   dropshark.fingerprint:
     class: Drupal\dropshark\Fingerprint\FingerprintDefault
     arguments: ['@config.factory', '@kernel']
+  dropshark.linfo_factory:
+    class: Drupal\dropshark\Util\LinfoFactory
+    arguments: ['@config.factory']
   dropshark.queue:
     class: Drupal\dropshark\Queue\DbQueue
     arguments: ['@database', '@dropshark.request', '@config.factory']
