--- a/dropshark.services.yml
+++ b/dropshark.services.yml
@@ -13,5 +13,4 @@ services:
     arguments: ['@config.factory', '@http_client']
   plugin.manager.dropshark_collector:
     class: Drupal\dropshark\Collector\CollectorManager
-    parent: default_plugin_manager
-    arguments: ['@dropshark.queue', '@dropshark.fingerprint']
+    arguments: ['@service_container']
